--- a/app/views/observations/_new.html.erb
+++ b/app/views/observations/_new.html.erb
@@ -1,4 +1,18 @@
 <div id="create-observation" class="area-container">
+  <div class="row">
+    <div class="col-md-12">
+      <% if @error.present? -%>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="alert alert-danger" role="alert">
+              <strong><%= t('.error') %></strong></br>
+              <%= @error %>
+            </div>
+          </div>
+        </div>
+      <% end -%>
+    </div>
+  </div>
   <%= form_for(@observation, remote: true) do |f| %>
     <%= hidden_field_tag :area_code, @area_code if @area_code %>
     <%= hidden_field_tag :geometry, @geom if @geom %>
