--- a/app/views/requests/mobile/_new.html.erb
+++ b/app/views/requests/mobile/_new.html.erb
@@ -106,7 +106,8 @@
               <div class="btn-group" role="group">
                 <%= f.submit(t('buttons.save'), class: 'btn btn-default btn-primary') %>
               </div>
-              <%= link_to(t('buttons.cancel'), map_path, remote: true, class: 'btn btn-default', role: :button) %>
+              <%= link_to(t('buttons.cancel'), map_path(mobile: @mobile), remote: true,
+                          class: 'btn btn-default', role: :button) %>
             </div>
           </div>
         </div>
