--- a/app/views/requests/desktop/_new_position_buttons.html.erb
+++ b/app/views/requests/desktop/_new_position_buttons.html.erb
@@ -1,4 +1,5 @@
 <div class="request-container">
+  <%= render '/application/desktop/errors' %>
   <div class="row form-group">
     <%= label_tag :step, t('.step_one'), class: 'control-label col-md-12' %>
   </div>
