--- a/app/views/votes/desktop/_new.html.erb
+++ b/app/views/votes/desktop/_new.html.erb
@@ -1,5 +1,6 @@
 <div id="new-vote" class="request-container">
   <%= render partial: '/requests/desktop/request_header', locals: { label_photo_required: nil } %>
+  <%= render '/application/desktop/errors' %>
   <%= form_for([:request, @vote], remote: true) do |f| %>
     <div class="row form-group">
       <%= label_tag :vote, t('.title'), class: 'col-md-12 control-label' %>
