--- a/app/views/protocols/_new.html.erb
+++ b/app/views/protocols/_new.html.erb
@@ -5,6 +5,7 @@
     </div>
     <div class="panel-body">
       <%= form_for([:request, @protocol], remote: true, authenticity_token: true, html: { class: 'form-horizontal fileupload' }) do |f| %>
+        <%= hidden_field_tag :mobile, @mobile %>
         <div class="form-group">
           <%= f.label(:process_number, Protocol.human_attribute_name(:process_number), class: 'col-md-2 control-label') %>
           <div class="col-md-10">
@@ -49,7 +50,8 @@
               <div class="btn-group" role="group">
                 <%= f.submit(t('.actions.send'), class: 'btn btn-default btn-primary') %>
               </div>
-              <%= link_to(t('buttons.cancel'), [@request, id_list: @id_list], remote: true, class: 'btn btn-default', role: :button) %>
+              <%= link_to(t('buttons.cancel'), [@request, id_list: @id_list, mobile: @mobile],
+                          remote: true, class: 'btn btn-default', role: :button) %>
             </div>
           </div>
         </div>
