Sidebar initial aufgeklappt

--- a/app/views/maps/_desktop.html.erb
+++ b/app/views/maps/_desktop.html.erb
@@ -81,7 +81,7 @@
         </div>
       </div>
     </div>
-    <div class="sidebar-toggler">
+    <div class="sidebar-toggler open">
       <span></span>
     </div>
   </div>
