Label für Karten-Schaltfläche vertauscht

--- a/app/views/maps/_desktop.html.erb
+++ b/app/views/maps/_desktop.html.erb
@@ -12,8 +12,8 @@
 <% end -%>
 <div id="content">
   <div class="view-switcher">
-      <%= link_to t('.map_view'), '#', class: 'btn btn-default btn-map switch-map-view', id: 'aerial',
-        data: { aerial: t('.aerial_view'), map: t('.map_view') } %>
+      <%= link_to t('.aerial_view'), '#', class: 'btn btn-default btn-map switch-map-view', id: 'aerial',
+        data: { aerial: t('.map_view'), map: t('.aerial_view') } %>
     </div>
   <div id="ol-map" class="ol-map-desktop">
     <div class="sidebar">
