--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -77,9 +77,10 @@ header
 
 .sidebar
   background-color: #fff
-  border-right: solid 1px #ddd
+  border: solid 1px #ddd
   width: 320px
-  height: 100%
+  top: 3%
+  height: 94%
   position: absolute
   z-index: 1000
   overflow-y: auto
