--- a/app/assets/stylesheets/maps.sass
+++ b/app/assets/stylesheets/maps.sass
@@ -32,6 +32,9 @@
     left: 325px
     top: 45px
 
+.geolocation.ol-control button
+  width: 120px
+
 .ol-touch .ol-control
   button
     font-size: $font-size-h1
