Fehlermeldung ausgeben, wenn Meldung außerhalb der gültigen Bereichs angelegt wird

--- a/app/views/application/desktop/_errors.html.erb
+++ b/app/views/application/desktop/_errors.html.erb
@@ -5,12 +5,9 @@
         <div class="alert alert-danger" role="alert">
           <strong><%= t("#{ controller_name }.desktop.create.error") %></strong>
           <ul>
-            <% @errors.each do |error| -%>
-              <% if messages = error[:base] -%>
-                <% messages.each do |msg| -%>
-                  </li><%= msg.html_safe %></li>
-                <% end -%>
-              <% end -%>
+            <% messages = @errors.try(:full_messages) || @errors.map { |err| err[:base] }.flatten -%>
+            <% messages.each do |msg| -%>
+              </li><%= msg.html_safe %></li>
             <% end -%>
           </ul>
         </div>
