--- a/app/views/requests/desktop/_start_request.html.erb
+++ b/app/views/requests/desktop/_start_request.html.erb
@@ -6,7 +6,8 @@
   </div>
   <div class="row">
     <div class="col-md-12">
-      <%= link_to t('buttons.new_request'), [:new, :request, mobile: @mobile], remote: true, class: 'btn btn-primary' %>
+      <%= link_to t('buttons.new_request'), [:new, :request, mobile: @mobile], remote: true,
+        class: 'btn btn-primary' %>
     </div>
     <div class="col-md-12">
       <ul>
