--- a/app/views/starts/show.html.erb
+++ b/app/views/starts/show.html.erb
@@ -26,13 +26,14 @@
                       <div class="col-md-12">
                         <%= req.service %>
                       </div>
+                      <% if (url = req.media_url).present? -%>
+                        <div class="col-md-12">
+                          <img src="<%= url %>" alt="<%= Request.human_attribute_name(:media_url) %>" 
+                               class="img-rounded img-responsive" />
+                        </div>
+                      <% end -%>
                     </div>
                   </div>
-                  <% if (url = req.media).present? -%>
-                    <div class="col-md-12">
-                      <img src="<%= url %>" alt="<%= Request.human_attribute_name(:media_url) %>" class="img-rounded img-responsive" />
-                    </div>
-                  <% end -%>
                 </div>
               <% end -%>
             </div>
