--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -65,6 +65,10 @@ header
   .container
     color: #1c94c4
 
+  #logo
+    height: 65px
+    float: right
+
 .footer
   position: fixed
   bottom: 0px
