--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -65,9 +65,12 @@ header
   .container
     color: #1c94c4
 
-  #logo
-    height: 65px
+  #logo1
+    margin: 10px
+
+  #logo2
     float: right
+    margin: 5px 10px
 
 .footer
   position: fixed
@@ -83,8 +86,8 @@ header
   background-color: #fff
   border: solid 1px #ddd
   width: 320px
-  top: 3%
-  height: 94%
+  top: 2%
+  height: 96%
   position: absolute
   z-index: 1000
   overflow-y: auto
@@ -133,7 +136,7 @@ header
 .view-switcher
   margin-top: 10px
   position: absolute
-  top: 100px
+  top: 120px
   z-index: 100
   right: 0
 
