--- a/app/assets/stylesheets/maps.sass
+++ b/app/assets/stylesheets/maps.sass
@@ -19,7 +19,7 @@
   left: 0
   position: absolute
   right: 0
-  top: 100px
+  top: 120px
 
   .ol-zoom
     left: 325px
@@ -50,3 +50,6 @@
 
   button
     font-size: $font-size-h5
+
+#textsizer
+  margin-top: 10px
