--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
             <div class="col-md-4">
               <div class="row">
                 <div class="col-md-12">
-                  <%= image_tag image_path('klarschiff.png') %>
+                  <%= image_tag image_path('klarschiff.png'), id: 'logo1' %>
                 </div>
               </div>
               <div class="row">
@@ -47,7 +47,7 @@
             <div class="col-md-4">
               <div class="row">
                 <div class="col-md-12">
-                  <%= image_tag image_path('logo-hro.png'), id: 'logo' %>
+                  <%= image_tag Settings::Client.logo_url, id: 'logo2' %>
                 </div>
                 <div class="col-md-12">
                   <div class="text-right">
