--- a/app/views/starts/show.html.erb
+++ b/app/views/starts/show.html.erb
@@ -47,7 +47,7 @@
       <div class="panel-body">
         <div class="row form-group">
           <div class="col-md-12">
-            Klarschiff.HRO
+            <%= Settings::Client.name %>
           </div>
         </div>
         <div class="row">
