--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -398,6 +398,7 @@ class KS.Geolocation
       unless KS.position
         KS.geolocation.center(map) if KS.geolocation?
       KS.position = this.getPosition()
+      KS.moveNewFeature()
 
   center: (map) ->
     overlays = map.getOverlays().getArray()
@@ -422,6 +423,7 @@ KS.createFeature= (type, coord) ->
 
   feature = new ol.Feature(
     geometry: new ol.geom.Point(position)
+    type: type
   )
 
   KS.newFeatureInteraction = new ol.interaction.Modify(
@@ -439,8 +441,10 @@ KS.clearNewFeature= () ->
 
 KS.moveNewFeature= (coord) ->
   if KS.olMap.getInteractions().getArray().some((el) -> el instanceof ol.interaction.Modify)
+    console.log('Test')
+    type = KS.newFeatureOverlay.getFeatures().getArray()[0].get('type')
     KS.clearNewFeature
-    KS.createFeature 'blank', coord
+    KS.createFeature type, coord
 
 KS.reloadFeatures= () ->
   extent = KS.olMap.getView().calculateExtent(KS.olMap.getSize())
