--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,13 +24,13 @@
                 <%= yield :nav %>
                 <div class="col-md-4" id="textsizer">
                   <div class="btn-group textresizer">
-                    <%= link_to 'javascript:;', class: 'btn btn-sm btn-default', remote: true do %>
+                    <%= link_to '#', class: 'btn btn-sm btn-default', remote: true do %>
                       A-
                     <% end -%>
-                    <%= link_to 'javascript:;', class: 'btn btn-sm btn-default textresizer-active', remote: true do %>
+                    <%= link_to '#', class: 'btn btn-sm btn-default textresizer-active', remote: true do %>
                       A
                     <% end -%>
-                    <%= link_to 'javascript:;', class: 'btn btn-sm btn-default', remote: true do %>
+                    <%= link_to '#', class: 'btn btn-sm btn-default', remote: true do %>
                       A+
                     <% end -%>
                   </div>
