Klick auf Navbar rendert die jeweilige Startseite

--- a/app/assets/javascripts/application.coffee.erb
+++ b/app/assets/javascripts/application.coffee.erb
@@ -151,3 +151,8 @@ $ ->
       scale.css left: scale.offset().left - width
       geoloc.css left: geoloc.offset().left - width
       addr_search.css left: addr_search.offset().left - width
+
+  $(document).on 'click', '.header-tab', () ->
+    console.log('test')
+    $.get("/#{ $(@).prop('id') }?back=true", null, null, 'script')
+    false
