--- a/app/views/areas/_areas_form.html.erb
+++ b/app/views/areas/_areas_form.html.erb
@@ -20,7 +20,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="btn-group btn-group-justified">
-          <%= link_to t('buttons.cancel'), [:areas, cancel: true], remote: true, class: 'btn btn-default' %>
+          <%= link_to t('buttons.cancel'), [:areas, back: true], remote: true, class: 'btn btn-default' %>
           <%= link_to t('buttons.resume'), 'javascript:;', id: 'areas-form-submit', remote: true, class: 'btn btn-primary', data: { context: @context } %>
         </div>
       </div>
