--- a/app/views/observations/_new.html.erb
+++ b/app/views/observations/_new.html.erb
@@ -34,7 +34,7 @@
     <div class="row">
       <div class="col-md-12">
         <div class="btn-group btn-group-justified">
-          <%= link_to t('buttons.cancel'), [:areas, cancel: true], remote: true, class: 'btn btn-default' %>
+          <%= link_to t('buttons.cancel'), [:areas, back: true], remote: true, class: 'btn btn-default' %>
           <div class="btn-group">
             <%= f.submit t('buttons.submit'), class: 'btn btn-primary' %>
           </div>
