--- a/app/views/observations/_show_link.html.erb
+++ b/app/views/observations/_show_link.html.erb
@@ -9,7 +9,7 @@
   </div>
   <div class="row">
     <div class="col-md-4 col-md-offset-4">
-      <%= link_to t('buttons.ok'), [:areas, back: true], remote: true, class: 'btn btn-primary' %>
+      <%= link_to t('buttons.ok'), '#', id: 'btn-start', class: 'btn btn-primary' %>
     </div>
   </div>
 </div>
