--- a/app/assets/javascripts/maps.coffee.erb
+++ b/app/assets/javascripts/maps.coffee.erb
@@ -402,9 +402,8 @@ class KS.Geolocation
   center: (map) ->
     overlays = map.getOverlays().getArray()
     if(overlays.length > 0)
-      map.getView().fitExtent(
-        overlays[0].getFeatures().getArray()[0].getGeometry().getExtent(), map.getSize()
-      )
+      map.getView().setCenter(overlays[0].getFeatures().getArray()[0].getGeometry().getExtent())
+      map.getView().setZoom(KS.maxZoom - 1)
     KS.moveNewFeature()
 
 KS.map =
